Add some Css And Buttons Aligntment and Clear Buttons ts

--- a/src/app/app/aboutus/aboutus.component.html
+++ b/src/app/app/aboutus/aboutus.component.html
@@ -1,7 +1,15 @@
 
 <app-header></app-header>
 <div class="about-section">
-    <h1>About Us Page</h1>
-    <p>Some text about who we are and what we do.</p>
-    <p>Resize the browser window to see that this page is responsive by the way.</p>
+    <h1>Train Inquiry System</h1>
+    <p>Therefore proposed “Train Enquiry System (TES)” has been designed to automate the process of
+      railway for Train Schedule system back office activities. System can make the daily activities efficient
+      and provide the fast response. The “Train Enquiry System (TES)” has been developed to override the
+      problems prevailing in the practicing manual system.</p>
+    <p>The complete guide to Indian Railways trains between stations.</p>
+    <p>Indian railways enquiry between two stations provides a list of all available trains running on a particular route. It helps travellers make informed travel decisions.
+
+      With a train enquiry between stations, done through a website or mobile app, the passengers can get an overview of all trains scheduled for their travel route.
+      
+      Train enquiry between two stations helps passengers filter train options (as per their travel preferences) for a particular route and take the best travel decision.</p>
   </div>
