--- a/src/app/app/home/home.component.scss
+++ b/src/app/app/home/home.component.scss
@@ -112,6 +112,7 @@ th[sortable] {
         box-shadow: 0 16px 25px 0 rgba(23, 54, 132, 0.996);
   }
   .Container{
-    background-color: rgb(87, 231, 231);
+    background-color: oldlace;
     padding: 1px;
   }
+  
