--- a/src/app/app/trainbwstation/trainbwstation.component.html
+++ b/src/app/app/trainbwstation/trainbwstation.component.html
@@ -2,29 +2,20 @@
 
 <form [formGroup]="myGroup" (ngSubmit)="onSubmit()">
   <div>
-  <div>
-    <label for="fname">From Station</label><br>
-    <select aria-label="label for the select" [(ngModel)]="fstation" name="fstation" placeholder="From Station" (ngModelChange)="onOptionsSelected()" formControlName="fstation" >
-      <option *ngFor="let station of station" [ngValue]="station">{{station.stationname}} {{station.stationcode}}
+    <label>From Station</label><br>
+      <select aria-label="label for the select" [(ngModel)]="fstation" name="fstation" placeholder="From Station"  (ngModelChange)="onOptionsSelected()" formControlName="fstation" >
+      <option *ngFor="let station of station" [ngValue]="station">{{station.stationname}} {{station.stationcode}} 
       </option>
-  </select>
-<!-- <div>
-{{filtered|json}}
-</div> -->
-<button type="button" class="btn btn-primary btn-sm">Clear</button>
-</div>
+      </select>
+      <button type="button" class="btn btn-primary btn-sm" (click)="clear1()">Clear</button>
+  </div>
 <div>
 <label for="fname">To Station</label><br>
 <select aria-label="label for the select"  [(ngModel)]="tstation" name="tstation" placeholder="To Station" (ngModelChange)="onOptionsSelectedt()" formControlName="tstation" >
   <option *ngFor="let station of station" [ngValue]="station">{{station.stationname}} {{station.stationcode}}</option>
 </select>
-<!-- <div>
-{{filtered|json}}
-</div> -->
-<button type="button" class="btn btn-primary btn-sm">Clear</button>
-</div>
+<button type="button" class="btn btn-primary btn-sm" (click)="clear2()">Clear</button><br><br>
 <button type="button" (click)="onSubmit()" [disabled]="myGroup.invalid">Submit</button>
-
 </div><br><br><br><br>
 <table class="table">
   <tbody>
@@ -46,23 +37,8 @@
     <tr>
       <td colspan="3">
         <div class="textalign-center">
-          <span class="left"><b>13034</b>
-            GUJARAT QUEEN<br></span>
-          <span class="right">Daily | Memu</span><br>
-          </div>
-          <div class="textalign-center">
-            <span class="left"><b>04:50</b><br>Vadodara Jn<br>BRC</span>
-            <b>--03:14 Hrs.--</b>
-            2S,SL,3A,2A,1A
-            <span class="right"><b>15:50</b><br>Valsad Jn<br>BL</span>
-            </div>
-          </td>
-    </tr>
-    <tr>
-      <td colspan="3">
-        <div class="textalign-center">
-          <span class="left"><b>22056</b>
-            SABARMATI EXPRESS<br></span>
+          <span class="left"><b>22956</b>
+            KUTCH EXPRESS<br></span>
           <span class="right">Daily | Superfast</span><br>
           </div>
           <div class="textalign-center">
@@ -76,8 +52,8 @@
     <tr>
       <td colspan="3">
         <div class="textalign-center">
-          <span class="left"><b>22066</b>
-           VANDE BHARAT<br></span>
+          <span class="left"><b>22956</b>
+            KUTCH EXPRESS<br></span>
           <span class="right">Daily | Superfast</span><br>
           </div>
           <div class="textalign-center">
@@ -91,8 +67,23 @@
     <tr>
       <td colspan="3">
         <div class="textalign-center">
-          <span class="left"><b>22046</b>
-            SAIRASTHRA EXPRSS<br></span>
+          <span class="left"><b>22956</b>
+            KUTCH EXPRESS<br></span>
+          <span class="right">Daily | Superfast</span><br>
+          </div>
+          <div class="textalign-center">
+            <span class="left"><b>04:50</b><br>Vadodara Jn<br>BRC</span>
+            <b>--03:14 Hrs.--</b>
+            2S,SL,3A,2A,1A
+            <span class="right"><b>15:50</b><br>Valsad Jn<br>BL</span>
+            </div>
+          </td>
+    </tr>
+    <tr>
+      <td colspan="3">
+        <div class="textalign-center">
+          <span class="left"><b>22956</b>
+            KUTCH EXPRESS<br></span>
           <span class="right">Daily | Superfast</span><br>
           </div>
           <div class="textalign-center">
