--- a/src/app/app/trainbwstation/trainbwstation.component.scss
+++ b/src/app/app/trainbwstation/trainbwstation.component.scss
@@ -37,6 +37,8 @@ input{
   .btn-primary{
     padding: 5px;
     margin: 5px;
+    width: 60px;
+    margin-bottom: 10px;
   }
   .left{
     float: left;
@@ -56,10 +58,16 @@ b{
   font-weight: bold;
 }
 form{
-background-color: aqua;
-padding: 50px;
+background-color: lightsteelblue;
+
 }
 select{
-width: 500px;
+width: 600px;
+padding: 5px;
+
 }
+div{
+  padding: 15px;
+}
+
   
